# tradingclaw-futures

./: .env.example  .gitignore  README.md  pyproject.toml  start_tradingclaw.sh
data/fixtures/: m6e_snapshot.json  mcl_bars.csv  mcl_snapshot.json
scripts/: openclaw_bridge.py  tc_command.py  verify_live_sources.py
src/openclaw_futures/: __init__.py  bot.py  cli.py  config.py  models.py  services.py
src/openclaw_futures/analysis/: live_levels.py  m6e_levels.py  mcl_levels.py  scoring.py  setups.py
src/openclaw_futures/api/: app.py  routes.py
src/openclaw_futures/discord/: __init__.py
src/openclaw_futures/discord/commands/: __init__.py  core.py
src/openclaw_futures/integrations/: __init__.py  openclaw_adapter.py  openclaw_bridge.py  openclaw_client.py  openclaw_contracts.py  reasoning_payloads.py  tc_command.py  webhook.py
src/openclaw_futures/providers/: base.py  file_provider.py  twelvedata_provider.py
src/openclaw_futures/render/: assistant_render.py  discord_render.py  text_render.py  webhook_render.py
src/openclaw_futures/risk/: __init__.py  account_plan.py  contracts.py
src/openclaw_futures/services/: __init__.py  scanner.py
src/openclaw_futures/storage/: db.py  ideas.py  market_bars.py  results.py  runtime_state.py  stats.py
tests/: conftest.py  test_api.py  test_cli.py  test_commands.py  test_contracts.py  test_live_sync.py  test_openclaw_adapter.py  test_openclaw_integration.py  test_provider.py  test_render.py  test_setups.py  test_storage.py  test_tc_command.py  test_webhook.py
tests/fixtures/: m6e_bars.csv
