[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingclaw-futures"
version = "0.1.0"
description = "Local futures analysis engine for deterministic MCL and M6E trade planning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tradingclaw-futures = "openclaw_futures.cli:main"
tradingclaw-futures-api = "openclaw_futures.cli:serve_main"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_futures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
